--- a/Bistand-och-ccTLDs/index.html
+++ b/Bistand-och-ccTLDs/index.html
@@ -220,7 +220,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                             <table class="imgtable btnset" style="margin: 0px auto; text-align: center;" cellspacing="0" cellpadding="0" border="0">
                               <tbody>
                                 <tr>
-                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="https://multireligionvalsystem.eu.org/Industril%C3%A4ndernas+och+u-l%C3%A4ndernas+topdom%C3%A4n/" target="_blank"><img title="Reform" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_6_d50b8b19-b641-4360-b87d-0ac09eabf6b3.png" border="none"></a> </td>
+                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/" target="_blank"><img title="Reform" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_6_d50b8b19-b641-4360-b87d-0ac09eabf6b3.png" border="none"></a> </td>
                                 </tr>
                               </tbody>
                             </table>
@@ -393,7 +393,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                             <table class="imgtable btnset" style="margin: 0px auto; text-align: center;" cellspacing="0" cellpadding="0" border="0">
                               <tbody>
                                 <tr>
-                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="http://multireligionvalsystem.eu.org/Fattigaste%20l%C3%A4ndernas%20topdom%C3%A4n/Bist%C3%A5nd%20och%20ccTLDs/" target="_blank"><img title="Multireligionval" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_10_a676074a-cf13-4c31-8ac8-2a6019a5b9d0.png" border="none"></a> </td>
+                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/" target="_blank"><img title="Multireligionval" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_10_a676074a-cf13-4c31-8ac8-2a6019a5b9d0.png" border="none"></a> </td>
                                 </tr>
                               </tbody>
                             </table>
@@ -427,7 +427,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                             <table class="imgtable btnset" style="margin: 0px auto; text-align: center;" cellspacing="0" cellpadding="0" border="0">
                               <tbody>
                                 <tr>
-                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="http://multireligionvalsystem.eu.org/Fattigaste%20l%C3%A4ndernas%20topdom%C3%A4n/Bist%C3%A5nd%20och%20ccTLDs/FDU/"><img title="FRED" alt=".sd" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_12_ee5b1276-1a1a-45bc-be64-6b4372b6ba2a.png" border="none"></a> </td>
+                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="http://multireligionvalsystem.eu.org/FRED/"><img title="FRED" alt=".sd" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_12_ee5b1276-1a1a-45bc-be64-6b4372b6ba2a.png" border="none"></a> </td>
                                 </tr>
                               </tbody>
                             </table>
@@ -573,7 +573,8 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                           <th class="contenttd" style="border: medium none ; padding: 1px 15px; width: 603px; vertical-align: top; font-weight: normal; text-align: left; background-color: transparent;">
                             <p style="font-size: 10px; margin-bottom: 1em; font-family: arial,helvetica,sans-serif; margin-top: 0px; color: rgb(124, 124, 124); text-align: center; line-height: 12px; background-color: transparent;" align="center"><strong><span style="font-size: 18px; line-height: 22px;">De
                                   sådde och vi åt , vi sår och de äter</span></strong><br>
-                              <a style="color: rgb(223, 224, 224);" href="http://multireligionvalsystem.eu.org/Fattigaste%20l%C3%A4ndernas%20topdom%C3%A4n/Bist%C3%A5nd%20och%20ccTLDs/multireligionvalsystem/">multireligionval.</a>cf
+                              <a style="color: rgb(223, 224, 224);" href="http://a-multi-religion election.multireligionvalsystem.eu.org/">multireligionval.</a>
+                               
 -
                               <a style="color: rgb(223, 224, 224);" href="mailto:info@multireligionvalsystem.eu.org/">denyasvenskarna@gmail.com</a></p>
                             <p style="font-size: 10px; margin-bottom: 1em; font-family: arial,helvetica,sans-serif; margin-top: 0px; color: rgb(124, 124, 124); text-align: center; line-height: 12px; background-color: transparent;" align="center"><span style="font-size: 18px; line-height: 22px;">Miljö
@@ -582,7 +583,7 @@ modellen
                               <span style="font-size: 16px; font-family: &quot;palatino linotype&quot;,&quot;book antiqua&quot;,palatino,serif; line-height: 20px;">Fred,
 Demokrati,
                                 Hållbar utveckling vilar på ett
-                                Multireligionvalsystem</span> <a title="FDU" style="color: rgb(223, 224, 224);" href="http://multireligionvalsystem.eu.org/Fattigaste%20l%C3%A4ndernas%20topdom%C3%A4n/Bist%C3%A5nd%20och%20ccTLDs/fred/" target="_blank">Läs
+                                Multireligionvalsystem</span> <a title="FDU" style="color: rgb(223, 224, 224);" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/" target="_blank">Läs
                                 vidare</a>.</p>
                             <p style="font-size: 10px; margin-bottom: 1em; font-family: arial,helvetica,sans-serif; margin-top: 0px; color: rgb(124, 124, 124); text-align: center; line-height: 12px; background-color: transparent;" align="center">©2022 F.D.U. All rights reserved.</p>
                           </th>
