--- a/Bistand-och-ccTLDs/index.html
+++ b/Bistand-och-ccTLDs/index.html
@@ -352,7 +352,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                               Since the relaxation of registration restrictions,
                               many companies have registered .se domains in bids
                               to drive more Swedish traffic and become more
-                              attractive to the market in Sweden. </div>
+                              attractive to the market in Sweden.Barn kan lära sig alfabetet tidigt från ccTLDs som finns  på nationernas flaggor i en ny flaggdesing </div>
                           </th>
                         </tr>
                         <tr style="height: 1709px;" height="1709">
@@ -393,7 +393,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                             <table class="imgtable btnset" style="margin: 0px auto; text-align: center;" cellspacing="0" cellpadding="0" border="0">
                               <tbody>
                                 <tr>
-                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/" target="_blank"><img title="Multireligionval" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_10_a676074a-cf13-4c31-8ac8-2a6019a5b9d0.png" border="none"></a> </td>
+                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/" target="_blank"><img title="Multireligionval" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_10_a676074a-cf13-4c31-8ac8-2a6019a5b9d0.png" border="none"></a> </td>
                                 </tr>
                               </tbody>
                             </table>
@@ -460,7 +460,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                             <table class="imgtable btnset" style="margin: 0px auto; text-align: center;" cellspacing="0" cellpadding="0" border="0">
                               <tbody>
                                 <tr>
-                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="http://multireligionvalsystem.eu.org/Fattigaste%20l%C3%A4ndernas%20topdom%C3%A4n/Bist%C3%A5nd%20och%20ccTLDs/fred"><img title="Sudan" alt=".sd" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_14_516f0d46-df9f-4760-b7ab-e038e7ffb8f4.png" border="none"></a> </td>
+                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="https://ditt-land-och-religionsfrihet.multireligionvalsystem.eu.org/"><img title="Sudan" alt=".sd" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_14_516f0d46-df9f-4760-b7ab-e038e7ffb8f4.png" border="none"></a> </td>
                                 </tr>
                               </tbody>
                             </table>
@@ -503,7 +503,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                             <table class="imgtable btnset" style="text-align: right; margin-left: auto; margin-right: 0px;" cellspacing="0" cellpadding="0" border="0">
                               <tbody>
                                 <tr>
-                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="http://multireligionvalsystem.eu.org/Fattigaste%20l%C3%A4ndernas%20topdom%C3%A4n/Bist%C3%A5nd%20och%20ccTLDs/multireligionvalsystem"><img title="multireligionvalsystem" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_15_344f37a9-35a5-45a9-8ce8-a1a875318f47.png" border="none"></a> </td>
+                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="http://a-multi-religion-election.system.multireligionvalsystem.eu.org/"><img title="multireligionvalsystem" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_15_344f37a9-35a5-45a9-8ce8-a1a875318f47.png" border="none"></a> </td>
                                 </tr>
                               </tbody>
                             </table>
@@ -526,7 +526,7 @@ div[id^="dfp-ad-"], .cardAd, .adsleft, #ad-target, .ad.widget, #leaderboard-ad, 
                             <table class="imgtable btnset" style="text-align: right; margin-left: auto; margin-right: 0px;" cellspacing="0" cellpadding="0" border="0">
                               <tbody>
                                 <tr>
-                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="http://multireligionval.cf/"><img title="multireligionval" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_16_56eec016-0a16-4c57-a2b6-27654606029e.png" border="none"></a> </td>
+                                  <td class="contenttd" style="padding: 0px; vertical-align: middle;"><a href="https://a-multi-religion-election-system.multireligionvalsystem.eu.org/den-judisk-kristna-politiska-alliansen//"><img title="multireligionval" alt="Läs vidare" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Bistand-och-ccTLDs/Image_16_56eec016-0a16-4c57-a2b6-27654606029e.png" border="none"></a> </td>
                                 </tr>
                               </tbody>
                             </table>
