--- a/index.html
+++ b/index.html
@@ -80,11 +80,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <ul class="unorder-list dropdown-menu" aria-labelledby="">
             <li class="list-item"><a title="" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/index.html" class="nav-link">Home</a>
             </li>
-            <li class="list-item"><a title="" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/about.html" class="nav-link">About</a>
+            <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/about" class="nav-link">About</a>
             </li>
-            <li class="list-item"><a title="" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/contact.html" class="nav-link">Contact</a>
+            <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/contact/" class="nav-link">Contact</a>
             </li>
-          </ul><a class="glyph btn btn-default dropdown-toggle" href="#" id="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="coffeecup-icons-menu9"></i></a>
+		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/contact/" class="nav-link">Contact</a>
+            </li>
+		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/contact/" class="nav-link">Contact</a>
+            </li>
+		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/contact/" class="nav-link">Contact</a>
+            </li>
+          </ul><a class="glyph btn btn-default dropdown-toggle" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/" id="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="coffeecup-icons-menu9"></i></a>
         </nav>
       </nav>
     </div>
