--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </li>
             <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/contact/" class="nav-link">Contact</a>
             </li>
-		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/contact/" class="nav-link">Contact</a>
+		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/Enskild-motion-FDU-Riksdagen" class="nav-link">Mtion till Eu och Riksdagen</a>
             </li>
-		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/contact/" class="nav-link">Contact</a>
+		   <li class="list-item"><a title="" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/" class="nav-link">Activation of poor countries ccTLDs</a>
             </li>
-		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/contact/" class="nav-link">Contact</a>
+		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/Conflict-resolution-model/ennyflaggdesign.html/" class="nav-link">En ny flaggdesign</a>
             </li>
           </ul><a class="glyph btn btn-default dropdown-toggle" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/" id="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="coffeecup-icons-menu9"></i></a>
         </nav>
