--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           Debatt om religiösa symboler på flaggor vs. ccTLDs
 
 Översikt
-Denna diskussion utforskar betydelsen av religiösa symboler på nationella flaggor inom ramen för internationella organisationer som EU, FN och NATO. Den undersöker också förslaget att ersätta dessa symboler med landskod toppnivådomäner (ccTLDs).</a>.</p>
+Denna diskussion utforskar betydelsen av icke  religiösa symboler på nationella flaggor inom ramen för internationella organisationer som EU, FN och NATO. Den undersöker också förslaget att ersätta dessa symboler med landskod toppnivådomäner (ccTLDs).</a>.</p>
     </div>
     <div class="col-xs-12 team-column">
       <div class="container-fluid team-member-container">
@@ -139,11 +139,11 @@ Denna diskussion utforskar betydelsen av religiösa symboler på nationella flag
           </picture>
         </div>
         <h4 class="team-name"> Political Practices in Exile </h4>
-        <p class="paragraph">Argument för religiösa symboler på flaggor
+        <p class="paragraph">Argument mot och för religiösa symboler på flaggor
 
 #Kulturarv
 
-Nationella flaggor speglar ofta ett lands kulturella och religiösa historia. Till exempel visar Greklands och Spaniens flaggor framträdande religiösa symboler som är viktiga för deras nationella berättelser.</p>
+Nationella flaggor speglar ofta ett lands kulturella och religiösa historia. Till exempel Nordiska länderna , Georgien, Iran, Israel Greklands och Spaniens flaggor framträdande religiösa symboler som är viktiga för deras nationella berättelser.</p>
         <div class="container-fluid team-social-box"><a href="https://www.facebook.com/denyasvenskarna" target="_blank" class="social-image team-social-button" title="ttps://www.facebook.com/pages/De-svenska-partiernas-r%C3%B6tter/146480148715642"><img class="facebook-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-facebook.png" alt="Social Icon"></a><a href="#" target="_blank" class="social-image team-social-button"><img class="googleplus-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-googleplus.png" alt="Social Icon"></a><a href="https://twitter.com/DPNS" target="_blank" class="social-image team-social-button"><img class="twitter-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-twitter.png" alt="Social Icon"></a>
         </div>
       </div>
