--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="rule dark-rule">
         <hr>
       </div>
-      <p class="paragraph">Why do the flags of nations wave with religious symbols over the EU, UN, and NATO? It's important to replace these symbols with the countries' own ccTLDs. This change would make the flags more meaningful and respectful. <a title="" href="https://a-multi-religion-election-system.multireligionvalsystem.eu.org/den-judisk-kristna-politiska-alliansen" class="link"><br>
-          Debatt om religiösa symboler på flaggor vs. ccTLDs br>
+      <p class="paragraph">Why do the flags of nations wave with religious symbols over the EU, UN, and NATO? <br>It's important to replace these symbols with the countries' own ccTLDs. This change would make the flags more meaningful and respectful. <a title="" href="https://a-multi-religion-election-system.multireligionvalsystem.eu.org/den-judisk-kristna-politiska-alliansen" class="link"><br>
+          Debatt om religiösa symboler på flaggor vs. ccTLDs <br>
 
 Översikt<br>
 Denna diskussion utforskar betydelsen av icke  religiösa symboler på nationella flaggor inom ramen för internationella organisationer som EU, FN och NATO. Den undersöker också förslaget att ersätta dessa symboler med landskod toppnivådomäner (ccTLDs).</a>.</p>
