--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </li>
             <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/contact/" class="nav-link">Contact</a>
             </li>
-		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/Enskild-motion-FDU-Riksdagen" class="nav-link">Mtion till Eu och Riksdagen</a>
+		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/Enskild-motion-FDU-Riksdagen" class="nav-link">Motion till Eu och Riksdagen</a>
             </li>
 		   <li class="list-item"><a title="" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Redesigning-Religious-Symbols-on-Flags-at-the-UN-EU-NATO/" class="nav-link">Activation of poor countries ccTLDs</a>
             </li>
-		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/Conflict-resolution-model/ennyflaggdesign/" class="nav-link">En ny flaggdesign</a>
+		   <li class="list-item"><a title="" href="https://multireligionvalsystem.eu.org/Conflict-resolution-model/" class="nav-link">Conflict resolution model</a>
             </li>
           </ul><a class="glyph btn btn-default dropdown-toggle" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/" id="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="coffeecup-icons-menu9"></i></a>
         </nav>
@@ -112,7 +112,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="rule">
           <hr>
         </div>
-        <p class="paragraph header-paragraph">Religions for peace.</p>
+        <p class="paragraph header-paragraph">Investeringsprojekt för flyktingar att tillämpas vid återvändandet och återuppbyggandet-</p>
       </header>
     </div>
   </div>
@@ -159,7 +159,7 @@ Nationella flaggor speglar ofta ett lands kulturella och religiösa historia. Ti
         <p class="paragraph">#Nationell identitet
 Religiösa symboler kan förena medborgare under ett gemensamt trossystem och stärka den nationella identiteten. De symboliserar de värderingar som formar en nations karaktär.
 #Globalt erkännande
-Flaggor med religiösa symboler kan förbättra en nations synlighet och erkännande på den internationella scenen och framhäva sociokulturella attribut.&nbsp;.</p>
+Flaggor med ccTLDs förbättrar en nations synlighet och erkännande på den internationella scenen och framhäva sociokulturella attribut.&nbsp;.</p>
         <div class="container-fluid team-social-box"><a href="https://www.facebook.com/Multireligionval/" target="_blank" class="social-image team-social-button"><img class="facebook-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-facebook.png" alt="Social Icon"></a><a href="#" target="_blank" class="social-image team-social-button"><img class="googleplus-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-googleplus.png" alt="Social Icon"></a><a href="https://twitter.com/DPNS" target="_blank" class="social-image team-social-button"><img class="twitter-icon" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/webicon-twitter.png" alt="Social Icon"></a>
         </div>
       </div>
@@ -878,16 +878,16 @@ religiös art och icke av politisk, ekonomisk eller social art. </p>
     </div>
     <div class="col-xs-12 spotlight-column">
       <div class="container-fluid spotlight-container"><span class="glyph spotlight-icon"><i class="coffeecup-icons-star-full"></i></span>
-        <h4 class="spotlight-heading">Multireligionvalsystem</h4>
-        <p class="paragraph">Den teoretiska modellen.</p>
+        <h4 class="spotlight-heading">De fattigländernas ccTLDs som inte fungera p g a krig, religösa eller diktatorisk styre, får delgeras till flyktingar</h4>
+        <p class="paragraph">Arbetslösheten bland flyktingar /invandrare lösas genom ccTLDs får delgeras till de .</p>
       </div>
       <div class="container-fluid spotlight-container"><span class="glyph spotlight-icon"><i class="coffeecup-icons-piggy-bank"></i></span>
-        <h4 class="spotlight-heading">Multireligionval</h4>
-        <p class="paragraph">Den praktiska modellen.</p>
+        <h4 class="spotlight-heading">Political Practices in Exile</h4>
+        <p class="paragraph">IT-bolag.</p>
       </div>
       <div class="container-fluid spotlight-container"><span class="glyph spotlight-icon"><i class="coffeecup-icons-shield-check"></i></span>
-        <h4 class="spotlight-heading">Multireligionstödet</h4>
-        <p class="paragraph">Den finansiella modellen som är motsvarande partistödet</p>
+        <h4 class="spotlight-heading">De fattigländernas ccTLDs </h4>
+        <p class="paragraph">Den finansiella modellen</p>
       </div>
       <div class="container-fluid spotlight-container"><span class="glyph spotlight-icon"><i class="coffeecup-icons-user-check2"></i></span>
         <h4 class="spotlight-heading">Icke aktiva ccTLDs</h4>
