--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Denna diskussion utforskar betydelsen av icke  religiösa symboler på nationell
           <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/162355.png=159 1x" media="(min-width: 1200px)">
               <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/2c207f5e-a38a-498f-8f8f-9c776cfb6342.webp 1x" media="(min-width: 321px)">
-                <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/2c207f5e-a38a-498f-8f8f-9c776cfb6342.webp 1x"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
+                <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/2c207f5e-a38a-498f-8f8f-9c776cfb6342.webp"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
         <h4 class="team-name"> Political Practices in Exile </h4>
@@ -151,8 +151,8 @@ Nationella flaggor speglar ofta ett lands kulturella och religiösa historia. Ti
         <div class="responsive-picture team-picture" id="team-member-2">
           <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/th_003.jpg 1x" media="(min-width: 1200px)">
-              <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/girl-profile.jpg 1x" media="(min-width: 321px)">
-                <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/7356a8bf-0294-4261-80bd-a61bc76a1f26.png 1x"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
+              <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/girl-profile.jpg" media="(min-width: 321px)">
+                <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/7356a8bf-0294-4261-80bd-a61bc76a1f26.png"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
         <h4 class="team-name">Argument för religiösa symboler på flaggor</h4>
@@ -168,7 +168,7 @@ Flaggor med ccTLDs förbättrar en nations synlighet och erkännande på den int
           <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/th.jpg 1x" media="(min-width: 1200px)">
               <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/review-2.jpg 1x" media="(min-width: 321px)">
-                <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/review-2.jpg 1x"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
+                <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/review-2.jpg"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
         <h4 class="team-name">Motargument till religiösa symboler på flaggor</h4>
@@ -183,7 +183,7 @@ Att betona religiös tillhörighet kan överskugga bredare nationella identitete
         <div class="responsive-picture team-picture" id="team-member-4">
           <picture><!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/th_002.jpg 1x" media="(min-width: 1200px)">
-              <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/man-profile-2.jpg 1x" media="(min-width: 321px)">
+              <source srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/man-profile-2.jpg" media="(min-width: 321px)">
                 <source media="screen" srcset="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/e5278b24-1a3a-4717-9abe-9f473736d278.jpeg 1x"><!--[if IE 9]></video><![endif]--><img alt="Team Member" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
           </picture>
         </div>
@@ -829,7 +829,7 @@ Att betona religiös tillhörighet kan överskugga bredare nationella identitete
         <p class="paragraph strategy-p">
 Samernas nationaldag, Ursprungsbefolkning
 Ett självständigt Sampi som har eget parlament, Sametinget, borde har en fungernade ccTLDs vilket är viktigare en själva flaggan . Just nu ligger Sametinget  under .se.  https://www.sametinget.se/
-Om Samerna aktiverar sin topdomän (.sp ) så att  Sametinget får ett nytt globalt erkännande  https://www.sametinget.sp/  och kansli@sametinget.sp  . Detta i sin tur förenar alla samer i olika länder.
+Om Samerna aktiverar sin topdomän (.sp ) så att  Sametinget får ett nytt globalt erkännande  https://www.sametinget.sp/  och <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c3a8a2adb0afaa83b0a2aea6b7aaada4a6b7edb0b3">[email&#160;protected]</a>  . Detta i sin tur förenar alla samer i olika länder.
 - Samiska barn kan lära sig alfabetet från flaggan . 
 Skapa en ny flaggindusti,
 skapa arbetstillfällen i Sampi.
@@ -908,7 +908,7 @@ representerar varje lands medborgare oavsett religion.</p>
         <div class="container-fluid nav-container-footer">
           <a class="link-text footer-nav-link" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/index.html">Home</a>
           <a class="link-text footer-nav-link" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/about.html">About</a>
-          <a class="link-text footer-nav-link" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/contact.html">https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/Contact</a>
+          <a class="link-text footer-nav-link" href="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/contact.html">Contact</a>
         </div>
         <div class="container-fluid social-footer-container">
           <div class="responsive-picture logo-footer">
@@ -926,7 +926,7 @@ representerar varje lands medborgare oavsett religion.</p>
       <p class="paragraph footer-paragraph">Political Practices in Exile <span class="paragraph-text-2">&nbsp;Three reforms that change the world </span>Copyright © F.D.U</p>
     </div>
   </div>
-  <script src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/jquery.min.js"></script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/jquery.min.js"></script>
   <script src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/bootstrap.min.js"></script>
    <script>
 	var beamer_config = {
@@ -975,4 +975,5 @@ overflow-y: hidden !important;
 overflow-x: hidden !important;
 transform: none !important;
 }
-</style><div id="chatbase-message-bubbles" style="position: fixed; bottom: 85px; border-radius: 10px; font-family: sans-serif; font-size: 16px; z-index: 2147483644; cursor: pointer; flex-direction: column; gap: 50px; max-width: 70vw; display: none;"><div style="position: absolute; top: -7px; right: -7px; font-weight: bold; display: none; justify-content: center; align-items: center; z-index: 2147483643; width: 22px; height: 22px; border-radius: 50%; text-align: center; font-size: 12px; cursor: pointer;">✕</div></div><div id="chatbase-bubble-window" style="border: medium; position: fixed; flex-direction: column; justify-content: space-between; box-shadow: rgba(150, 150, 150, 0.2) 0px 10px 30px 0px, rgba(150, 150, 150, 0.2) 0px 0px 0px 1px; bottom: 85px; right: 1rem; width: 458px; height: 85dvh; max-height: 824px; border-radius: 0.75rem; display: none; z-index: 2147483646; overflow: hidden;"><div style="display: none; justify-content: center; height: 100%; align-items: center;"></div><iframe style="height: 100%; width: 100%; border: medium; display: block;" title="Chatbot"></iframe></div><iframe id="rufous-sandbox" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" style="position: absolute; visibility: hidden; display: none; width: 0px; height: 0px; padding: 0px; border: medium;" title="Twitter analytics iframe"></iframe></body></html>
+</style><div id="chatbase-message-bubbles" style="position: fixed; bottom: 85px; border-radius: 10px; font-family: sans-serif; font-size: 16px; z-index: 2147483644; cursor: pointer; flex-direction: column; gap: 50px; max-width: 70vw; display: none;"><div style="position: absolute; top: -7px; right: -7px; font-weight: bold; display: none; justify-content: center; align-items: center; z-index: 2147483643; width: 22px; height: 22px; border-radius: 50%; text-align: center; font-size: 12px; cursor: pointer;">✕</div></div><div id="chatbase-bubble-window" style="border: medium; position: fixed; flex-direction: column; justify-content: space-between; box-shadow: rgba(150, 150, 150, 0.2) 0px 10px 30px 0px, rgba(150, 150, 150, 0.2) 0px 0px 0px 1px; bottom: 85px; right: 1rem; width: 458px; height: 85dvh; max-height: 824px; border-radius: 0.75rem; display: none; z-index: 2147483646; overflow: hidden;"><div style="display: none; justify-content: center; height: 100%; align-items: center;"></div><iframe style="height: 100%; width: 100%; border: medium; display: block;" title="Chatbot"></iframe></div><iframe id="rufous-sandbox" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" style="position: absolute; visibility: hidden; display: none; width: 0px; height: 0px; padding: 0px; border: medium;" title="Twitter analytics iframe"></iframe><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"942f7c481cea82c5","version":"2025.4.0-1-g37f21b1","r":1,"token":"90fdef7da9c745b9921b35c565174988","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' crossorigin="anonymous"></script>
+</body></html>
