--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html><head>
+	<script src="https://analytics.ahrefs.com/analytics.js" data-key="3YmCtGH7YvCfd8vvTxp2oA" async></script>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script async="" src="https://discover-the-power-of-cctlds.multireligionvalsystem.eu.org/gtm.htm"></script>
